# BBB-eQEP

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  libtool
docs/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in
dts/: Makefile.am  Makefile.in  bone_eqep1.dts  bone_eqep2-00A0.dtbo  bone_eqep2.dts  bone_eqep2alt-00A0.dtbo  fast_eqep0-00A0.dtbo  fast_eqep0.dts  fast_eqep1-00A0.dtbo  fast_eqep1.dts  fast_eqep2-00A0.dtbo  fast_eqep2.dts  fast_eqep2alt-00A0.dtbo  fast_eqep2alt.dts
examples/: .gitignore  Makefile.am  Makefile.in  test.cpp  test_multiple.cpp
include/: Makefile.am  Makefile.in  bbb-eqep.h  debug.h
src/: Makefile.am  Makefile.in  bbb-eqep.cpp
